Fix image stretching

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -26,3 +26,7 @@
     height: 100%;
   }
 }
+
+.top-spaces {
+  margin-top: 20px;
+}
