--- a/static/style.css
+++ b/static/style.css
@@ -17,8 +17,7 @@
   width: 100%;
   height: 100%; }
 
-canvas {
-  width: 100%;
-  height: auto; }
+.top-spaces {
+  margin-top: 20px; }
 
 /*# sourceMappingURL=style.css.map */
